--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "recli",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Stian Grytøyr",
-  "description": "RethinkDB query CLI",
+  "description": "RethinkDB CLI query tool and REPL",
   "main": "index.js",
   "preferGlobal": true,
   "dependencies": {
