--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "preferGlobal": true,
   "dependencies": {
     "rethinkdb": "1.11.x",
-    "optimist": "0.6.x"
+    "optimist": "0.6.x",
+    "coffee-script": "~1.7.1"
   },
   "devDependencies": {},
   "bin": {
@@ -27,7 +28,7 @@
   "bugs": {
     "url": "https://github.com/stiang/recli/issues"
   },
-  "contributors": [ 
+  "contributors": [
     {
       "name": "Stian Grytøyr",
       "email": "stian@grytoyr.net"
@@ -35,6 +36,6 @@
     {
       "name": "Luc Heinrich",
       "email": "luc@honk-honk.com"
-    } 
+    }
   ]
 }
