--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recli",
-  "version": "0.0.11",
+  "version": "0.1.0",
   "author": "Stian Grytøyr",
   "description": "RethinkDB CLI query tool and REPL",
   "main": "index.js",
@@ -8,7 +8,8 @@
   "dependencies": {
     "rethinkdb": "1.11.x",
     "optimist": "0.6.x",
-    "coffee-script": "1.7.x"
+    "coffee-script": "1.7.x",
+    "js-yaml": "3.0.x"
   },
   "devDependencies": {},
   "bin": {
